<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/logic_activity"
        android:icon="@drawable/activity"
        android:enabled="true"
        android:title="@string/activity" />
    <item
        android:id="@+id/logic_view"
        android:icon="@drawable/view"
        android:enabled="true"
        android:title="@string/view" />
    <item
        android:id="@+id/logic_component"
        android:icon="@drawable/component"
        android:enabled="true"
        android:title="@string/component" />
    <item
        android:id="@+id/logic_drawer"
        android:icon="@drawable/drawer"
        android:enabled="true"
        android:title="@string/drawer" />
    <item
        android:id="@+id/logic_more_block"
        android:icon="@drawable/more_block"
        android:enabled="true"
        android:title="@string/more_block" />
</menu>