<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_logic_fragment_graph"
    app:startDestination="@id/nav_logic_fragment_activity">

    <fragment
        android:id="@+id/nav_logic_fragment_activity"
        android:name="com.rajendra.sketchide.fragments.LogicFragmentActivity"
        android:label="@string/activity" />

    <fragment
        android:id="@+id/nav_logic_fragment_view"
        android:name="com.rajendra.sketchide.fragments.LogicFragmentView"
        android:label="@string/view" />

    <fragment
        android:id="@+id/nav_logic_fragment_component"
        android:name="com.rajendra.sketchide.fragments.LogicFragmentComponent"
        android:label="@string/component" />

    <fragment
        android:id="@+id/nav_logic_fragment_drawer"
        android:name="com.rajendra.sketchide.fragments.LogicFragmentDrawer"
        android:label="@string/drawer" />

    <fragment
        android:id="@+id/nav_logic_fragment_more_block"
        android:name="com.rajendra.sketchide.fragments.LogicFragmentMoreBlock"
        android:label="@string/more_block" />
</navigation>
