<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?colorSurface"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="12dp">

            <TextView
                android:id="@+id/editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/editor"
                android:textColor="#ff606060"
                android:padding="8dp"
                android:textSize="11sp" />
        <TextView
            android:id="@+id/config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/config"
            android:textColor="#ff606060"
            android:padding="8dp"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/delete"
            android:textColor="#ff606060"
            android:padding="8dp"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/rename"
            android:textColor="#ff606060"
            android:padding="8dp"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/backup"
            android:textColor="#ff606060"
            android:padding="8dp"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/settings"
            android:textColor="#ff606060"
            android:padding="8dp"
            android:textSize="11sp" />

    </LinearLayout>

</LinearLayout>
