<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">

    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu"
        android:icon="@drawable/sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/create_project"
        android:title="@string/create_project"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contribute"
        android:title="Contribute"
        app:showAsAction="never"/>
    <item
        android:id="@+id/test"
        android:title="testitem"
        app:showAsAction="never"/>


</menu>
