<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">

    <item
        android:id="@+id/undo"
        android:icon="@drawable/undo"
        android:title="@string/undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/redo"
        android:icon="@drawable/redo"
        android:title="@string/redo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/save"
        app:showAsAction="always"/>


    <item
        android:id="@+id/create_project"
        android:title="soon1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contribute"
        android:title="soon1"
        app:showAsAction="never"/>


</menu>
