<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_width="match_parent"
android:gravity="bottom"
android:padding="20dp"
android:background="@color/colorPrimary"
android:layout_height="180dp">

<androidx.cardview.widget.CardView
    android:layout_width="60dp"
    android:layout_height="60dp"
    app:cardCornerRadius="40dp"
    app:cardElevation="0dp"
    android:backgroundTint="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sketchide"
        android:contentDescription="@string/app_icon"
        android:padding="5dp"/>

</androidx.cardview.widget.CardView>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="15sp"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/website"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="13sp"/>


</LinearLayout>